[project]
name = "typhoon-isan"
version = "0.1.0"
description = "FastAPI application for transcribing Isan dialect audio using Typhoon ASR Whisper model"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "gradio>=4.44.0",
    "transformers>=4.36.0",
    "torch>=2.1.1",
    "torchaudio>=2.1.1",
    "accelerate>=0.25.0",
    "librosa>=0.10.1",
    "pydantic>=2.5.0",
]

[tool.uv]
package = false
